--- a/resume.tex
+++ b/resume.tex
@@ -100,7 +100,7 @@
 	{Founder | CEO | https://www.flagupmail.com}
 	{Flagupmail}
 	{San Francisco, CA}
-	{March 2017 – Present}
+	{March 2017 – Dec 2018}
 	{\begin{cvitems}
 		\item {Founded Flagupmail to store personal hand-written keepsakes from classrooms for later retrieval (1-5 years)}
 		\item {Created a prelaunch campaign to organically gain users by with the use referral incentives written in Ruby on Rails}
